reivew carousel alignment fix

--- a/client/src/styles/Reviews.css
+++ b/client/src/styles/Reviews.css
@@ -14,6 +14,7 @@
 
 .review-container div {
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
@@ -43,7 +44,7 @@
     position: relative;
     justify-content: center;
     align-items: center;
-    width: 33rem;
+    width: 32.3rem;
 }
 
 .reviews-window {
@@ -65,7 +66,7 @@
 }
 
 .arrow-btn.left {
-    right: 16.8em;
+    right: 16.5em;
 }
 
 .arrow-btn.right {
